Declarar variables en NetBeans

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /PrimerProyectoNetBeans/nbproject/private/
 /PrimerProyectoNetBeans/build/
 /Estructurasdelenguaje/nbproject/private/
+/DeclararVariables/nbproject/private/
+/DeclararVariables/build/
