--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Estructurasdelenguaje/nbproject/private/
 /DeclararVariables/nbproject/private/
 /DeclararVariables/build/
+/ConstantesyOperadores/nbproject/private/
+/ConstantesyOperadores/build/
