Ejercicios de la pagina 58

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /DeclararVariables/build/
 /ConstantesyOperadores/nbproject/private/
 /ConstantesyOperadores/build/
+/Math1/nbproject/private/
+/Math1/build/
