Manejo de Strings

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /ConstantesyOperadores/build/
 /Math1/nbproject/private/
 /Math1/build/
+/Math2/nbproject/private/
+/Strings/nbproject/private/
+/Strings/build/
