--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,19 @@
 /Math2/nbproject/private/
 /Strings/nbproject/private/
 /Strings/build/
+/Strings2/nbproject/private/
+/Strings2/build/
+/C/ConstantesyOperadores/build/
+/C/ConstantesyOperadores/nbproject/private/
+/D/DeclararVariables/build/
+/D/DeclararVariables/nbproject/private/
+/M/Math1/build/
+/M/Math1/nbproject/private/
+/P/PrimerProyectoNetBeans/build/
+/P/PrimerProyectoNetBeans/nbproject/private/
+/S/Strings/build/
+/S/Strings/nbproject/private/
+/S/Strings2/build/
+/S/Strings2/nbproject/private/
+/EntradaYSalida/nbproject/private/
+/EntradaYSalida/build/
