--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@
 /S/Strings2/nbproject/private/
 /EntradaYSalida/nbproject/private/
 /EntradaYSalida/build/
+/Condicionales/nbproject/private/
+/Condicionales/build/
+/Switch/nbproject/private/
+/Switch/build/
+/Bucles/nbproject/private/
+/Bucles/build/
+/Bucles2/nbproject/private/
+/Bucles2/build/
